Fix styles on mobile

--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -4,7 +4,7 @@ main {
 
 #cluster-map {
   width: 100%;
-  height: 500px;
+  height: 400px;
 }
 
 #map {
@@ -14,4 +14,10 @@ main {
 
 .carousel-inner {
   max-height: 70vh;
+}
+
+@media (min-width: 320px) {
+  #cluster-map {
+    height: 500px;
+  }
 }
